--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "godwingab",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/godwwinpeace22/randomEnglishAndSpanishWords.git"
+  },
+  "bugs": {
+    "url": "https://github.com/godwwinpeace22/randomEnglishAndSpanishWords/issues"
+  },
+  "homepage": "https://github.com/godwwinpeace22/randomEnglishAndSpanishWords#readme"
 }
